# Org_and_agent_SOP

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_pillar.yml  new_service_line.yml
agent-sops/: README.md  audit-sop.sop.md  ingest-knowledge.sop.md  new-sop.sop.md  onboard-org.sop.md  validate-sop.sh
agents/: README.md  conductor.md  governance-validator.md  pillar-acquisition.md  qa-evaluator.md  sop-author.md
docs/: architecture.md  roadmap.md
examples/: README.md
examples/lean-operator/: README.md
examples/lean-operator/governance/: brand-voice.md  design-principles.md  measurement-principles.md  org-profile.md  tool-inventory.md
examples/lean-operator/org-map/: roles.yaml  team-structure.md
governance/: README.md  SCHEMA.md
org-map/: README.md  SCHEMA.md
skills/: README.md
skills/acquisition/: SKILL.md
skills/acquisition/seo/: SKILL.md  playbook.md
src/sop_agent/: __init__.py  __main__.py
templates/: README.md
tests/: test_overlay.py
